--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
 
                                     <ul>
 
-                                        <li><a href="chapter-3.php">WBC Chapter 3</a></li>
+                                        <li><a href="chapter-3.html">WBC Chapter 3</a></li>
 
-                                        <li><a href="chapter-2.php">WBC Chapter 2</a></li>
+                                        <li><a href="chapter-2.html">WBC Chapter 2</a></li>
 
-                                        <li><a href="chapter-1.php">WBC Chapter 1</a></li>
+                                        <li><a href="chapter-1.html">WBC Chapter 1</a></li>
 
                                     </ul>
 
