--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             	<div class="logo-box">
 
                 	<div class="logo">
-                        <a href="index.php">
+                        <a href="index.html">
                             <img style="max-width: 105px;" src="images/logo.png" alt="World Business Conclave" title="World Business Conclave">
                         </a>
                     </div>
@@ -79,7 +79,7 @@
 
                             <ul class="navigation clearfix">
 
-                                <li class="current"><a href="index.php">Home</a>
+                                <li class="current"><a href="index.html">Home</a>
 
                                 </li>
 
@@ -101,18 +101,18 @@
 
                                     <ul>
 
-                                        <li><a href="speakers.html">Social C-Suite</a></li>
+                                        <li><a href="social-c-suite.html">Social C-Suite</a></li>
 
-                                        <li><a href="speakers-detail.html">Global Luxuries Decode</a></li>
+                                        <li><a href="global-luxurie-award.html">Global Luxuries Decode</a></li>
 
-                                        <li><a href="speakers-detail.html">Global Platinum Award</a></li>
+                                        <li><a href="global-platinum-award.html">Global Platinum Award</a></li>
 
                                     </ul>
 
                                 </li>
 
                                 <li class="dropdown">
-                                    <a href="schedule.html">Business Conclave</a>
+                                    <a href="#">Business Conclave</a>
 
                                     <ul>
 
@@ -158,7 +158,9 @@
 
                         <div class="btn-box">
 
-                            <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Get Tickets</span></a>
+                            <a href="buy-ticket.html" class="theme-btn btn-style-one">
+                                <span class="btn-title">Get Tickets</span>
+                            </a>
 
                         </div>
 
@@ -186,7 +188,7 @@
 
             <nav class="menu-box">
 
-                <div class="nav-logo"><a href="index.php"><img src="images/logo-2.png" alt="" title=""></a></div>
+                <div class="nav-logo"><a href="index.html"><img src="images/logo-2.png" alt="" title=""></a></div>
 
                 
 
@@ -224,9 +226,9 @@
 
                             <li><span class="icon fa fa-chair"></span> 5000 Seats</li>
 
-                            <li><span class="icon fa fa-user-alt"></span> 12+ SPEAKERS</li>
+                            <li><span class="icon fa fa-user-alt"></span> 100+ CXO</li>
 
-                            <li><span class="icon fa fa-map-marker-alt"></span> Dubai, UAE</li>
+                            <li><span class="icon fa fa-map-marker-alt"></span> Delhi, India</li>
 
                         </ul>
 
@@ -284,7 +286,7 @@
 
             <div class="outer-box">
 
-                <div class="time-counter"><div class="time-countdown clearfix" data-countdown="12/31/2023"></div></div>
+                <div class="time-counter"><div class="time-countdown clearfix" data-countdown="02/14/2024"></div></div>
 
             </div>
 
@@ -657,7 +659,7 @@
 
                         <div class="image-box">
 
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-2.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/Anita-Nayyar.jpg" alt=""></a></figure> 
 
                         </div>
 
@@ -699,7 +701,7 @@
 
                         <div class="image-box">
 
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-3.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/ashok_sawhney.jpg" alt=""></a></figure> 
 
                         </div>
 
@@ -741,7 +743,7 @@
 
                         <div class="image-box">
 
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-4.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/bhaskar-pramanik.jpg" alt=""></a></figure> 
 
                         </div>
 
@@ -783,7 +785,7 @@
 
                         <div class="image-box">
 
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-5.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/guido_quill.jpg" alt=""></a></figure> 
 
                         </div>
 
@@ -825,7 +827,7 @@
 
                         <div class="image-box">
 
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-6.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/jeenanath_shetty.jpg" alt=""></a></figure> 
 
                         </div>
 
@@ -867,7 +869,7 @@
 
                         <div class="image-box">
 
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-7.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/karuna_gopal.jpg" alt=""></a></figure> 
 
                         </div>
 
@@ -909,7 +911,7 @@
 
                         <div class="image-box">
 
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-8.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/Mahesh_Murthy.jpg" alt=""></a></figure> 
 
                         </div>
 
@@ -1077,11 +1079,11 @@
 
                         <li class="tab-btn active-btn" data-tab="#tab-1">
 
-                            <span class="day">Day 01</span>
+                            <span class="day">Chapter 01</span>
 
-                            <span class="date">01</span> 
+                            <span class="date">11</span> 
 
-                            <span class="month">Jan</span> 2023
+                            <span class="month">Dec</span> 2016
 
                         </li>
 
@@ -1089,11 +1091,11 @@
 
                         <li class="tab-btn" data-tab="#tab-2">
 
-                            <span class="day">Day 02</span>
+                            <span class="day">Chapter 02</span>
 
-                            <span class="date">02</span>
+                            <span class="date">24</span>
 
-                            <span class="month">Jan</span> 2023
+                            <span class="month">Jun</span> 2017
 
                         </li>
 
@@ -1101,23 +1103,11 @@
 
                         <li class="tab-btn" data-tab="#tab-3">
 
-                            <span class="day">Day 03</span>
+                            <span class="day">Chapter 03</span>
 
-                            <span class="date">03</span>
+                            <span class="date">14</span>
 
-                            <span class="month">Jan</span> 2023
-
-                        </li>
-
-
-
-                        <li class="tab-btn" data-tab="#tab-4">
-
-                            <span class="day">Day 04</span>
-
-                            <span class="date">04</span>
-
-                            <span class="month">Jan</span> 2023
+                            <span class="month">Feb</span> 2024
 
                         </li>
 
@@ -1995,7 +1985,7 @@
 
             <div class="row">
 
-                <div class="content-column col-lg-6 col-md-12 col-sm-12 order-2">
+                <div class="content-column col-lg-7 col-md-12 col-sm-12 order-2">
 
                     <div class="inner-column">
 
@@ -2005,25 +1995,41 @@
 
                             <h2>Why Choose Social C-Suite?</h2>
 
-                            <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmtempor incididunt labore et dolore magna aliqu enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip</div>
+                            <div class="text">
+                                Stimulus Research Services is proud to announce the launch of the most coveted insignia as the
+                                compilation of the best 100 CXO’s from different sectors from Asia Pacific. This year will be a
+                                research driven power book by the editorial and research team of Stimulus and the selected jury
+                                from all the sectors.
+                            </div>
+
+                            <div class="text">
+                                This CXO Bible will help a lot of other sectors to learn from their inspirational stories and
+                                experiences. They will be showcased as thought leaders and veterans from their respective
+                                industries.
+                                <br /> 
+                                <br />
+                                With vivid illustration, it will explore the most creative innovations of popular business of 2023.
+                            </div>
 
                         </div>
 
                         <ul class="list-style-one">
 
-                            <li>High Quality Education</li>
-
-                            <li>You can learn anything</li>
-
-                            <li>We list your options by state</li>
-
-                            <li>Expert-created content and resources</li>
+                            <li>Globe recognition of your achievement, success and business ethics.</li>
+                            <li>Recognizing your excellence in the sight of various industries.</li>
+                            <li>Accessible top listen and understand the thoughts of expert business leaders.</li>
+                            <li>Exclusive and extensive coverage in traditional and online media.</li>
+                            <li>A perfect place to share your valuable ideas in respect to the growth of the world.</li>
+                            <li>Professional, excellent networking, international business opportunities.</li>
+                            <li>All awardees will be covered in ET Now.</li>
 
                         </ul>
 
                         <div class="btn-box">
 
-                            <a href="buy-ticket.html" class="theme-btn btn-style-two"><span class="btn-title">Get Tickets</span></a>
+                            <a href="buy-ticket.html" class="theme-btn btn-style-two">
+                                <span class="btn-title">Get Tickets</span>
+                            </a>
 
                         </div>
 
@@ -2031,7 +2037,7 @@
 
                 </div>
 
-                <div class="image-column col-lg-6 col-md-12 col-sm-12">
+                <div class="image-column col-lg-5 col-md-12 col-sm-12">
 
                     <div class="image-box">
 
@@ -2067,7 +2073,7 @@
 
                 <span class="title">Our Partner</span>
 
-                <h2>Official Sponsors</h2>
+                <h2>In-Association with</h2>
 
             </div>
 
@@ -2075,7 +2081,7 @@
 
             <div class="sponsors-outer">
 
-                <h3>Platinum Sponsors</h3>
+                <!-- <h3>Platinum Sponsors</h3> -->
 
                 <div class="row">
 
@@ -2571,7 +2577,7 @@
 
                                 <div class="tab active-tab" id="tab1">
 
-                                    <h4><span class="icon far fa-calendar"></span> January 20, 2023</h4>
+                                    <h4><span class="icon far fa-calendar"></span> February 14, 2024</h4>
 
                                     <div class="text">9.00 AM - 04.00 PM</div>
 
@@ -2581,7 +2587,7 @@
 
                                         <li><span class="icon icon_phone"></span> <a href="tel:+690-147-265-345">+123 456 7890</a></li>
 
-                                        <li><span class="icon icon_mail"></span> <a href="mailto:sopport@Eventrox.com">sopport@Eventrox.com</a></li>
+                                        <li><span class="icon icon_mail"></span> <a href="mailto:support@businessconclave.com">support@businessconclave.com</a></li>
 
                                     </ul>
 
@@ -2593,7 +2599,7 @@
 
                                 <div class="tab" id="tab2">
 
-                                    <h4><span class="icon fa fa-map-marker-alt"></span>Pearl hotel, New york, USA</h4>
+                                    <h4><span class="icon fa fa-map-marker-alt"></span>Pullman Aerocity, Delhi</h4>
 
                                     <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua. Aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</div>
 
@@ -2760,11 +2766,11 @@
 
                                     <ul class="user-links">
 
-                                        <li><a href="index-3.html">Social C-Suite</a></li>
+                                        <li><a href="social-c-suite.html">Social C-Suite</a></li>
 
-                                        <li><a href="about-us.html">Global Luxuries Decode</a></li>
+                                        <li><a href="global-luxurie-award.html">Global Luxuries Decode</a></li>
 
-                                        <li><a href="services.html">Global Platinum Award</a></li>
+                                        <li><a href="global-platinum-award.html">Global Platinum Award</a></li>
 
                                         <li><a href="contact.html">Contact Us</a></li>
 
