--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
 
 
-    </header>
+    </header> 
 
     <!--End Main Header -->
 
@@ -667,21 +667,9 @@
 
                             <div class="inner">
 
-                                <h4 class="name"><a href="speakers-detail.html">Natisha Decoux</a></h4>
+                                <h4 class="name"><a href="speakers-detail.html">Anita Nayyar</a></h4>
 
-                                <span class="designation">Event Manager</span>
-
-                                <ul class="social-links social-icon-colored">
-
-                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-
-                                </ul>
+                                <span class="designation">CEO, India & South Asia, Havas Media Group</span>
 
                             </div>
 
@@ -709,21 +697,9 @@
 
                             <div class="inner">
 
-                                <h4 class="name"><a href="speakers-detail.html">Adolfo Plahs</a></h4>
+                                <h4 class="name"><a href="speakers-detail.html">Ashok Sawhney</a></h4>
 
-                                <span class="designation">Event Manager</span>
-
-                                <ul class="social-links social-icon-colored">
-
-                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-
-                                </ul>
+                                <span class="designation">CEO, Swiss Military Worldwide</span>
 
                             </div>
 
@@ -751,21 +727,9 @@
 
                             <div class="inner">
 
-                                <h4 class="name"><a href="speakers-detail.html">Mitchell Heggestad</a></h4>
+                                <h4 class="name"><a href="speakers-detail.html">Bhaskar Pramanik</a></h4>
 
-                                <span class="designation">Event Manager</span>
-
-                                <ul class="social-links social-icon-colored">
-
-                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-
-                                </ul>
+                                <span class="designation">Chairman, Microsoft India</span>
 
                             </div>
 
@@ -793,21 +757,9 @@
 
                             <div class="inner">
 
-                                <h4 class="name"><a href="speakers-detail.html">Kenyetta Lesley</a></h4>
+                                <h4 class="name"><a href="speakers-detail.html">Guido Quill</a></h4>
 
-                                <span class="designation">Event Manager</span>
-
-                                <ul class="social-links social-icon-colored">
-
-                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-
-                                </ul>
+                                <span class="designation">Founder-German Foundation for Digital Education, VR Project of S2M, Germany</span>
 
                             </div>
 
@@ -835,21 +787,9 @@
 
                             <div class="inner">
 
-                                <h4 class="name"><a href="speakers-detail.html">Shelly Verghese</a></h4>
+                                <h4 class="name"><a href="speakers-detail.html">Jeenanath Shetty</a></h4>
 
-                                <span class="designation">Event Manager</span>
-
-                                <ul class="social-links social-icon-colored">
-
-                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-
-                                </ul>
+                                <span class="designation">Director, Unitop Chemicals Pvt Ltd</span>
 
                             </div>
 
@@ -877,21 +817,9 @@
 
                             <div class="inner">
 
-                                <h4 class="name"><a href="speakers-detail.html">Cassandra Kopka</a></h4>
+                                <h4 class="name"><a href="speakers-detail.html">Karuna Gopal</a></h4>
 
-                                <span class="designation">Event Manager</span>
-
-                                <ul class="social-links social-icon-colored">
-
-                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-
-                                </ul>
+                                <span class="designation">President, Foundation of Futuristic Cities</span>
 
                             </div>
 
@@ -919,21 +847,9 @@
 
                             <div class="inner">
 
-                                <h4 class="name"><a href="speakers-detail.html">Eugene Clumpner</a></h4>
+                                <h4 class="name"><a href="speakers-detail.html">Mahesh Murthy</a></h4>
 
-                                <span class="designation">Event Manager</span>
-
-                                <ul class="social-links social-icon-colored">
-
-                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-
-                                    <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-
-                                </ul>
+                                <span class="designation">Keynote Speaker & Digital Media Evangelist</span>
 
                             </div>
 
@@ -989,7 +905,7 @@
 
                             <span class="icon icon_ribbon_alt"></span>
 
-                            <span class="count-text" data-speed="3000" data-stop="62">0</span>
+                            <span class="count-text" data-speed="3000" data-stop="100">0</span>
 
                             <h4 class="counter-title">Awards Win</h4>
 
@@ -1007,9 +923,9 @@
 
                             <span class="icon icon_like"></span>
 
-                            <span class="count-text" data-speed="3000" data-stop="54">0</span>
+                            <span class="count-text" data-speed="3000" data-stop="15">0</span>
 
-                            <h4 class="counter-title">Certified Teachers</h4>
+                            <h4 class="counter-title">Jury</h4>
 
                         </div>
 
@@ -1025,9 +941,9 @@
 
                             <span class="icon icon_book_alt"></span>
 
-                            <span class="count-text" data-speed="3000" data-stop="38">0</span>
+                            <span class="count-text" data-speed="3000" data-stop="3">0</span>
 
-                            <h4 class="counter-title">Courses</h4>
+                            <h4 class="counter-title">Panels</h4>
 
                         </div>
 
@@ -1957,17 +1873,17 @@
 
     <!-- Video Section -->
 
-    <section class="video-section" style="background-image: url(images/background/1.jpg);">
+    <section class="video-section" style="background-image: url(images/background/sddefault.jpg);">
 
         <div class="auto-container">
 
             <div class="content-box">
 
-                <div class="text">WE’RE A LEADING INDUSTRY COMPANY</div>
+                <div class="text"><b>Stimulus Presents World Business Conclave 2016 Ep-1</b></div>
 
-                <h2>We Are Always at The <br>Forefront of The Business Conference !</h2>
+                <h2>Celebrating Asia-Pacific’s success story and offering impetus to the world’s fastest growing economy - India</h2>
 
-                <a href="https://www.youtube.com/watch?v=Fvae8nxzVz4" class="play-now" data-fancybox="gallery" data-caption=""><i class="icon flaticon-play-button-3" aria-hidden="true"></i><span class="ripple"></span></a>
+                <a href="https://www.youtube.com/watch?v=KD1LA_P7fcQ" class="play-now" data-fancybox="gallery" data-caption=""><i class="icon flaticon-play-button-3" aria-hidden="true"></i><span class="ripple"></span></a>
 
             </div>
 
@@ -2583,7 +2499,7 @@
 
                                     <ul class="info-list">
 
-                                        <li><span class="icon icon_profile"></span> Dianne Ameter</li>
+                                        <li><span class="icon icon_profile"></span> Sanjana Mohan</li>
 
                                         <li><span class="icon icon_phone"></span> <a href="tel:+690-147-265-345">+123 456 7890</a></li>
 
