--- a/index.html
+++ b/index.html
@@ -1785,7 +1785,7 @@
 
                             <!-- schedule Block -->
 
-                            <div class="schedule-block">
+                            <div class="schedule-block even">
 
                                 <div class="inner-box">
 
