--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
 
                         <div class="icon-box">
                             <span class="icon">
-                                <img width="50" height="50" src="/images/icons/icons/sector.svg" alt="">
+                                <img width="50" height="50" src="/images/icons/sector.svg" alt="">
                             </span>
                         </div>
 
@@ -603,7 +603,7 @@
 
                         <div class="icon-box">
                             <span class="icon">
-                                <img width="50" height="50" src="/images/icons/icons/club-membership.svg" alt="">
+                                <img width="50" height="50" src="/images/icons/club-membership.svg" alt="">
                             </span>
                         </div>
 
@@ -625,7 +625,7 @@
 
                         <div class="icon-box">
                             <span class="icon">
-                                <img width="50" height="50" src="/images/icons/icons/Media-Coverage.svg" alt="">
+                                <img width="50" height="50" src="/images/icons/Media-Coverage.svg" alt="">
                             </span>
                         </div>
 
@@ -647,7 +647,7 @@
 
                         <div class="icon-box">
                             <span class="icon">
-                                <img width="50" height="50" src="/images/icons/icons/Coffee-Table-Book.svg" alt="">
+                                <img width="50" height="50" src="/images/icons/Coffee-Table-Book.svg" alt="">
                             </span>
                         </div>
 
@@ -667,7 +667,7 @@
 
                         <div class="icon-box">
                             <span class="icon">
-                                <img width="50" height="50" src="/images/icons/icons/Investors.svg" alt="">
+                                <img width="50" height="50" src="/images/icons/Investors.svg" alt="">
                             </span>
                         </div>
 
@@ -703,7 +703,7 @@
 
                         <div class="icon-box">
                             <span class="icon">
-                                <img width="50" height="50" src="/images/icons/icons/Pitch-Tie-Members.svg" alt="">
+                                <img width="50" height="50" src="/images/icons/Pitch-Tie-Members.svg" alt="">
                             </span>
                         </div>
 
@@ -724,7 +724,7 @@
 
                         <div class="icon-box">
                             <span class="icon">
-                                <img width="50" height="50" src="/images/icons/icons/Participation.svg" alt="">
+                                <img width="50" height="50" src="/images/icons/Participation.svg" alt="">
                             </span>
                         </div>
 
@@ -745,7 +745,7 @@
 
                         <div class="icon-box">
                             <span class="icon">
-                                <img width="50" height="50" src="/images/icons/icons/NDTV-Tie-ups.svg" alt="">
+                                <img width="50" height="50" src="/images/icons/NDTV-Tie-ups.svg" alt="">
                             </span>
                         </div>
 
@@ -765,7 +765,7 @@
 
                         <div class="icon-box">
                             <span class="icon">
-                                <img width="50" height="50" src="/images/icons/icons/Auctions.svg" alt="">
+                                <img width="50" height="50" src="/images/icons/Auctions.svg" alt="">
                             </span>
                         </div>
 
@@ -785,7 +785,7 @@
 
                         <div class="icon-box">
                             <span class="icon">
-                                <img width="50" height="50" src="/images/icons/icons/Expo.svg" alt="">
+                                <img width="50" height="50" src="/images/icons/Expo.svg" alt="">
                             </span>
                         </div>
 
